# pysports-stats

./: .gitignore  CONTRIBUTING.md  LICENSE  README.rst  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: build.yml  publish.yml  pushtests.yml  release.yml
docs/: Makefile  conf.py  examples.rst  fb.rst  index.rst  installation.rst  mlb.rst  nba.rst  ncaab.rst  ncaaf.rst  nfl.rst  nhl.rst  testing.rst
sports/: constants.py  decorators.py  utils.py
sports/fb/: constants.py  fb_utils.py  roster.py  schedule.py  squad_ids.py  team.py
sports/mlb/: boxscore.py  constants.py  mlb_utils.py  roster.py  schedule.py  teams.py
sports/nba/: boxscore.py  constants.py  nba_utils.py  player.py  roster.py  schedule.py  teams.py
sports/ncaab/: boxscore.py  conferences.py  constants.py  ncaab_utils.py  rankings.py  roster.py  schedule.py  teams.py
sports/ncaaf/: boxscore.py  conferences.py  constants.py  ncaaf_utils.py  rankings.py  roster.py  schedule.py  teams.py
sports/nfl/: boxscore.py  constants.py  nfl_utils.py  roster.py  schedule.py  teams.py
sports/nhl/: boxscore.py  constants.py  nhl_utils.py  roster.py  schedule.py  teams.py
sportsipy/: constants.py  decorators.py  utils.py
sportsipy/fb/: roster.py  schedule.py
sportsipy/mlb/: boxscore.py  constants.py  roster.py  schedule.py
sportsipy/nba/: boxscore.py  constants.py  nba_utils.py  roster.py  schedule.py
sportsipy/ncaab/: constants.py  roster.py  schedule.py
sportsipy/ncaaf/: constants.py  rankings.py  roster.py  schedule.py
(+160 files in other folders)
